Fri Apr 30 03:17:20 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Improve algorithm for Matrix#determinant and
	  Matrix#rank
	  {determinant,det,rank}_e are now deprecated. [ruby-core:28273]
	  Also fixes a bug in Determinant#rank (e.g. [[0,1][0,1][0,1]])
	  Matrix#singular?, Matrix#regular? now raise on rectangular matrices
	  and use determinant instead of rank.

Fri Apr 30 00:52:56 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.h): define some constants to select
	  collect code for win64.

Thu Apr 29 20:10:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/test_open3.rb (test_commandline): use dump instead of
	  shellwords.  [ruby-core:23797]

Thu Apr 29 18:39:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/thwait.rb (ThreadsWait#join): refined rdoc again.
	  [ruby-core:29863] [ruby-dev:41092]

Thu Apr 29 14:46:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby: use more descriptive assertions.

	* test/ruby: fixed nonsense assertions.

	* lib/test/unit/assertions.rb (Test::Unit::Assertions#assert):
	  reverted.  [ruby-core:29872]

Thu Apr 29 12:33:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/thwait.rb (ThreadsWait#join): refined rdoc.  [ruby-core:29863]

Thu Apr 29 12:16:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (Test::Unit::Assertions#assert): reject
	  non-boolean values.  [ruby-core:29868]

Thu Apr 29 11:20:53 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (seek_before_access): renamed.  see [ruby-core:29861].

	* io.c (rb_io_s_binread): fixed rdoc.  parts of a patch from Roger
	  Pack in [ruby-core:29861].

Thu Apr 29 03:50:49 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/xmlrpc/utils.rb: Fixing an incompatibility with
	  reflection methods returning Symbols.  Patch by
	  HD Moore.  [ruby-core:29821]

Wed Apr 28 23:53:15 2010  Yusuke Endoh  <mame@tsg.ne.jp>
