@@ -1,3 +1,8 @@
+Fri Apr 30 03:38:14 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* numeric.c (fix_mul): the width of fixnum is same as long's on all
+	  platforms.
+
 Fri Apr 30 03:17:20 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
 	* lib/matrix.rb: Improve algorithm for Matrix#determinant and
